# This is the workspace configuration for a Rust project that contains multiple members.
# The resolver = "3" line specifies the dependency resolution algorithm to use.
[workspace]
resolver = "3"
members = ["additive_cipher", "aes-128", "german_freq_decryptor", "lineare_analysis", "vigenere", "vigenere_decrypter"]



[workspace.dependencies]
clap ={ version = "4.5.40", features = ["derive"] }

