# This is the workspace configuration for a Rust project that contains multiple members.
# The resolver = "3" line specifies the dependency resolution algorithm to use.
[workspace]
resolver = "3"
members = ["additive_cipher", "aes-128", "dh_exchange", "dh_params", "dsa-keygen", "dsa_sign", "dsa_verify", "german_freq_decryptor", "linear_approximation", "lineare_analysis", "rsa", "rsa-keygen", "sha3", "vigenere", "vigenere_decrypter"]



[workspace.dependencies]
clap ={ version = "4.5.40", features = ["derive"] }

