[package]
name = "cipher-modes"
version = "0.1.0"
edition = "2021"
authors = ["hackthesys"]
description = "Implementation of block cipher modes of operation (ECB, CBC, OFB, CTR)"
repository = "https://github.com/hackthesys/cryptography"
license = "MIT"
keywords = ["cryptography", "cipher", "modes", "encryption", "security"]
categories = ["cryptography", "algorithms"]
readme = "README.md"
documentation = "https://docs.rs/cipher-modes"

[dependencies]
hex = "0.4"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[features]
default = ["std"]
std = []
no_std = []
